--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,12 +1,12 @@
 <div class="header-container">
   <div class="menu">
-    <div class="menu-icon"></div>
-    &#9776; Menu
+    <div class="menu-icon"><fa-icon [icon]="faMenuIcon"></fa-icon></div>
+    Menu
   </div>
   <div class="icons">
-    <div class="kgt-icon">&#9776;</div>
-    <div class="fb-icon">&#9776;</div>
-    <div class="instagram-icon"></div>
+    <div class="kgt-icon"><fa-icon [icon]="faKgtIcon"></fa-icon></div>
+    <div class="fb-icon"><fa-icon [icon]="faFbIcon"></fa-icon></div>
+    <div class="instagram-icon"><fa-icon [icon]="faInstagramIcon"></fa-icon></div>
   </div>
   <div class="buttons">
     <button class="login-button">Zaloguj</button>
