--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 :root {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Roboto, Verdana, sans-serif;
     font-size: 12pt;
 
     /* colors */
