--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header-container">
   <div class="menu">
     <div class="menu-icon"><fa-icon [icon]="faMenuIcon"></fa-icon></div>
-    Menu
+    <div class="menu-text">Menu</div>
   </div>
   <div class="icons">
     <div class="kgt-icon"><fa-icon [icon]="faKgtIcon"></fa-icon></div>
