Renamed nav-bar component to side-nav-bar component

--- a/src/app/shared/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/shared/side-nav-bar/side-nav-bar.component.html
@@ -1,4 +1,4 @@
-<p>nav-bar works!</p>
+<p>side-nav-bar works!</p>
 <h1>Angular Router - Test</h1>
 <nav>
   <a routerLink="/login-form" routerLinkActive="active">Login</a>
