Added side-nav-bar service (open/close menu)

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-container">
-  <div class="menu">
+  <div class="menu" (click)="toggleMenu()">
     <div class="menu-icon"><fa-icon [icon]="faMenuIcon"></fa-icon></div>
     <div class="menu-text">Menu</div>
   </div>
