--- a/src/app/shared/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/shared/side-nav-bar/side-nav-bar.component.html
@@ -1,6 +1,6 @@
 <p>side-nav-bar works!</p>
-<h1>Angular Router - Test</h1>
-<nav>
+<!--<h1>Angular Router - Test</h1>
+ <nav>
   <a routerLink="/login-form" routerLinkActive="active">Login</a>
 </nav>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
