--- a/src/app/shared/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/shared/side-nav-bar/side-nav-bar.component.html
@@ -1,4 +1,6 @@
-<p>side-nav-bar works!</p>
+<div id="menu-content" class="menu-hidden">
+  <div>side-nav-bar works!</div>
+</div>
 <!--<h1>Angular Router - Test</h1>
  <nav>
   <a routerLink="/login-form" routerLinkActive="active">Login</a>
