--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -26,9 +26,92 @@
   display: flex;
 }
 
-.fb-icon, .instagram-icon, .kgt-icon, .menu-icon {
+.fb-icon, .instagram-icon, .kgt-icon {
   height: 1.4rem;
   width: 1.4rem;
   padding: 0.5rem;
   font-size: 1.4rem;
+}
+
+/* menu icon + animation */
+#menu-icon {
+  width: 1.4rem;
+  height: 1.1rem;
+  margin: 0.5rem;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+#menu-icon span {
+  display: block;
+  position: absolute;
+  height: 20%;
+  width: 100%;
+  background: var(--color-white);
+  border-radius: 0.5rem;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+
+#menu-icon span:nth-child(1) {
+top: 0;
+-webkit-transform-origin: left center;
+-moz-transform-origin: left center;
+-o-transform-origin: left center;
+transform-origin: left center;
+}
+
+#menu-icon span:nth-child(2) {
+top: 40%;
+-webkit-transform-origin: left center;
+-moz-transform-origin: left center;
+-o-transform-origin: left center;
+transform-origin: left center;
+}
+
+#menu-icon span:nth-child(3) {
+top: 80%;
+-webkit-transform-origin: left center;
+-moz-transform-origin: left center;
+-o-transform-origin: left center;
+transform-origin: left center;
+}
+
+#menu-icon.open span:nth-child(1) {
+-webkit-transform: rotate(45deg);
+-moz-transform: rotate(45deg);
+-o-transform: rotate(45deg);
+transform: rotate(45deg);
+top: -0.1rem;
+left: 0.2rem;
+}
+
+#menu-icon.open span:nth-child(2) {
+width: 0%;
+opacity: 0;
+}
+
+#menu-icon.open span:nth-child(3) {
+-webkit-transform: rotate(-45deg);
+-moz-transform: rotate(-45deg);
+-o-transform: rotate(-45deg);
+transform: rotate(-45deg);
+top: 0.9rem;
+left: 0.2rem;
 }
