Hide "menu" text when menu is open

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,7 +5,7 @@
       <span></span>
       <span></span>
     </div>
-    <div *ngIf="!isMenuShown" class="menu-text">Menu</div>
+    <div id="menu-text">Menu</div>
   </div>
   <div class="icons">
     <div class="kgt-icon">
