--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -13,9 +13,18 @@
   align-items: center;
 }
 
-.menu-text {
+#menu-text {
   font-size: 1.5rem;
   font-weight: bold;
+  transition: 1s;
+}
+
+.menu-text-hidden {
+  opacity: 0;
+}
+
+.menu-text-visible {
+  opacity: 1;
 }
 
 .icons {
