Fixes for displaying side-nav-bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-header></app-header>
+<div id="app-menu">
 <app-side-nav-bar></app-side-nav-bar>
+</div>
+<div id="app-content">
+<router-outlet></router-outlet>
+</div>
