--- a/src/app/shared/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/shared/side-nav-bar/side-nav-bar.component.html
@@ -1,8 +1,9 @@
 <div id="menu-content" class="menu-hidden">
-  <div>side-nav-bar works!</div>
-</div>
-<!--<h1>Angular Router - Test</h1>
- <nav>
+  <div class="list">side-nav-bar works!</div>
+
+<!-- <h1>Angular Router - Test</h1> -->
+ <!-- <nav>
   <a routerLink="/login-form" routerLinkActive="active">Login</a>
-</nav>
-<router-outlet></router-outlet> -->
+</nav> -->
+<!--<router-outlet></router-outlet> -->
+</div>
