Set background image for home Fixed menu toggle

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-container">
   <div class="menu" (click)="toggleMenu()">
-    <div (click)="toggleMenuIcon($event)" id="menu-icon">
+    <div id="menu-icon">
       <span></span>
       <span></span>
       <span></span>
