Added routing to login-form

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="buttons">
-    <button class="login-button">Zaloguj</button>
+    <button class="login-button" routerLink="/login-form" routerLinkActive="active">Zaloguj</button>
     <button class="registry-button">Zarejestruj</button>
   </div>
 </div>
