--- a/src/app/core/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/core/side-nav-bar/side-nav-bar.component.html
@@ -1,5 +1,9 @@
 <div id="menu-content" class="menu-hidden">
-  <div class="list">side-nav-bar works!</div>
+  <div class="list">
+    side-nav-bar works!
+    <div routerLink="/login-form" routerLinkActive="active">Login</div>
+    <div routerLink="" routerLinkActive="active">Home</div>
+  </div>
 
 <!-- <h1>Angular Router - Test</h1> -->
  <!-- <nav>
