Added input fields and login button to login-form

--- a/src/app/core/authentication/login-form/login-form.component.html
+++ b/src/app/core/authentication/login-form/login-form.component.html
@@ -1,1 +1,12 @@
-<p>login-form works!</p>
+<!-- <p>login-form works!</p> -->
+<div class="login-form">
+  <mat-form-field class="login-input">
+    <mat-label>Login</mat-label>
+    <input matInput placeholder="Input">
+  </mat-form-field>
+  <mat-form-field class="password-input">
+    <mat-label>Hasło</mat-label>
+    <input matInput placeholder="Input">
+  </mat-form-field>
+  <button mat-button class="login-button">Zaloguj</button>
+</div>
