--- a/src/app/core/authentication/login-form/login-form.component.css
+++ b/src/app/core/authentication/login-form/login-form.component.css
@@ -1,5 +1,26 @@
 p {
-    font-size: 3rem;
-    color: red;
-    font-weight: bold;
+  font-size: 3rem;
+  color: red;
+  font-weight: bold;
+}
+
+.login-form {
+  margin: 5rem auto;
+  width: 50%;
+  font-size: 1.5rem;
+}
+
+.login-form>* {
+  width: 100%;
+}
+
+.login-input {}
+
+.password-inpput {}
+
+.login-button {
+  background-color: var(--color-grey);
+  color: var(--color-white);
+  margin-top: 2rem;
+  font-size: 1.5rem;
 }
