added links to side nav bar

--- a/src/app/core/authentication/login-form/login-form.component.html
+++ b/src/app/core/authentication/login-form/login-form.component.html
@@ -9,4 +9,8 @@
     <input matInput placeholder="Input">
   </mat-form-field>
   <button mat-button class="login-button">Zaloguj</button>
+  <div class="links-container">
+    <div>Nie masz konta? Zarejestruj się.</div>
+    <div>Nie pamiętasz hasła?</div>
+  </div>
 </div>
