--- a/src/app/core/side-nav-bar/side-nav-bar.component.css
+++ b/src/app/core/side-nav-bar/side-nav-bar.component.css
@@ -13,10 +13,16 @@
     width: 15rem;
 }
 
-.list {
-  background-color:black;
+.category-list {
+  /* background-color:black; */
   height: 50%;
   width: 80%;
   white-space: nowrap;
   overflow: hidden;
+  padding: 0.5rem;
+}
+
+.category {
+  font-size: 1.5rem;
+  margin: 1rem 0.5rem;
 }
