--- a/src/app/core/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/core/side-nav-bar/side-nav-bar.component.html
@@ -1,8 +1,13 @@
 <div id="menu-content" class="menu-hidden">
-  <div class="list">
-    side-nav-bar works!
-    <div routerLink="/login-form" routerLinkActive="active">Login</div>
-    <div routerLink="" routerLinkActive="active">Home</div>
+  <div class="category-list">
+    <div class="category" routerLink="/login-form" routerLinkActive="active">Psy</div>
+    <div class="category" routerLink="/login-form" routerLinkActive="active">Przewodnicy</div>
+    <div class="category" routerLink="/login-form" routerLinkActive="active">Treningi</div>
+    <div class="category" routerLink="/login-form" routerLinkActive="active">Wydarzenia</div>
+    <div class="category" routerLink="/login-form" routerLinkActive="active">Certyfikaty</div>
+    <br>
+    <div class="category" routerLink="/login-form" routerLinkActive="active">Login</div>
+    <div class="category" routerLink="" routerLinkActive="active">Home</div>
   </div>
 
 <!-- <h1>Angular Router - Test</h1> -->
