Added dogs module

--- a/src/app/core/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/core/side-nav-bar/side-nav-bar.component.html
@@ -1,6 +1,6 @@
 <div id="menu-content" class="menu-hidden">
   <div class="category-list">
-    <div class="category" routerLink="/login-form" routerLinkActive="active">Psy</div>
+    <div class="category" routerLink="/dogs" routerLinkActive="active">Psy</div>
     <div class="category" routerLink="/login-form" routerLinkActive="active">Przewodnicy</div>
     <div class="category" routerLink="/login-form" routerLinkActive="active">Treningi</div>
     <div class="category" routerLink="/login-form" routerLinkActive="active">Wydarzenia</div>
