Change main blue color

--- a/src/app/core/side-nav-bar/side-nav-bar.component.css
+++ b/src/app/core/side-nav-bar/side-nav-bar.component.css
@@ -1,6 +1,6 @@
 #menu-content {
     transition: 1s;
-    background-color: var(--color-grey);
+    background-color: var(--color-blue-main);
     color: var(--color-white);
     height: 100%;
 }
