--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   height: 2.5rem;
-  background-color: var(--color-grey);
+  background-color: var(--color-blue-main);
   color: var(--color-white);
 }
 
