--- a/src/app/modules/home/home/home.component.css
+++ b/src/app/modules/home/home/home.component.css
@@ -1,8 +1,14 @@
-.background-image {
+/* .background-image {
     background-image: url('../../../../assets/images/home-background.jpg');
     opacity: 0.5;
     width: 100%;
     height: 100%;
     background-size: cover;
     background-position: center;
+} */
+
+.home-background {
+    border: 1px solid blue;
+    width: 100%;
+    height: 100%;
 }
