--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,29 +1,20 @@
 .header-container {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   height: 2.5rem;
   background-color: var(--color-blue-main);
   color: var(--color-white);
+  padding: 0 0.5rem;
 }
 
-.menu {
-  flex: 1;
+.category-list {
   display: flex;
-  align-items: center;
 }
 
-#menu-text {
-  font-size: 1.5rem;
-  font-weight: bold;
-  transition: 1s;
-}
-
-.menu-text-hidden {
-  opacity: 0;
-}
-
-.menu-text-visible {
-  opacity: 1;
+.category {
+  padding: 0 1rem;
+  font-size: 1.2rem;
 }
 
 .icons {
@@ -41,85 +32,9 @@
   font-size: 1.4rem;
 }
 
-/* menu icon + animation */
-#menu-icon {
-  width: 1.4rem;
-  height: 1.1rem;
-  margin: 0.5rem;
-  position: relative;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
-}
-
-#menu-icon span {
-  display: block;
-  position: absolute;
-  height: 20%;
-  width: 100%;
-  background: var(--color-white);
-  border-radius: 0.5rem;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
-}
-
-
-#menu-icon span:nth-child(1) {
-top: 0;
--webkit-transform-origin: left center;
--moz-transform-origin: left center;
--o-transform-origin: left center;
-transform-origin: left center;
-}
-
-#menu-icon span:nth-child(2) {
-top: 40%;
--webkit-transform-origin: left center;
--moz-transform-origin: left center;
--o-transform-origin: left center;
-transform-origin: left center;
-}
-
-#menu-icon span:nth-child(3) {
-top: 80%;
--webkit-transform-origin: left center;
--moz-transform-origin: left center;
--o-transform-origin: left center;
-transform-origin: left center;
-}
-
-#menu-icon.open span:nth-child(1) {
--webkit-transform: rotate(45deg);
--moz-transform: rotate(45deg);
--o-transform: rotate(45deg);
-transform: rotate(45deg);
-top: -0.1rem;
-left: 0.2rem;
-}
-
-#menu-icon.open span:nth-child(2) {
-width: 0%;
-opacity: 0;
-}
-
-#menu-icon.open span:nth-child(3) {
--webkit-transform: rotate(-45deg);
--moz-transform: rotate(-45deg);
--o-transform: rotate(-45deg);
-transform: rotate(-45deg);
-top: 0.9rem;
-left: 0.2rem;
+.buttons > * {
+  color: white;
+  font-size: 1.2rem;
+  background-color: transparent;
+  border: none;
 }
