--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,9 @@
-#app-menu {
-    z-index: 1;
-  position: fixed;
-  border: 4px green solid;
-  box-sizing: border-box;
-  height: calc(100% - 2.5rem);
-}
-
 #app-content {
   width: 100%;
   height: calc(100% - 2.5rem);
   position: fixed;
   box-sizing: border-box;
   border: 4px solid red;
+  padding: 0.5rem;
+  overflow: auto;
 }
