--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -15,6 +15,11 @@
 .category {
   padding: 0 1rem;
   font-size: 1.2rem;
+  display: flex;
+}
+
+.category fa-icon + span {
+  margin-left: 0.3rem;
 }
 
 .icons {
