Add footer with social media icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,16 @@
 <div id="app-content">
     <router-outlet></router-outlet>
 </div>
+<footer>
+  <div class="icons">
+    <div class="kgt-icon">
+      <fa-icon [icon]="faKgtIcon"></fa-icon>
+    </div>
+    <div class="fb-icon">
+      <fa-icon [icon]="faFbIcon"></fa-icon>
+    </div>
+    <div class="instagram-icon">
+      <fa-icon [icon]="faInstagramIcon"></fa-icon>
+    </div>
+  </div>
+</footer>
