--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,33 @@
+:host {
+  display: flex;
+  flex-flow: column;
+  overflow: hidden;
+  height: 100%;
+}
+
 #app-content {
   width: 100%;
-  height: calc(100% - 2.5rem);
-  position: fixed;
+  height: 100%;
   box-sizing: border-box;
   border: 4px solid red;
   padding: 0.5rem;
   overflow: auto;
+}
+
+footer {
+  background-color: var(--color-blue-main);
+}
+
+.icons {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 0.5rem;
+  color: var(--color-white)
+}
+
+.fb-icon, .instagram-icon, .kgt-icon {
+  height: 1rem;
+  width: 1rem;
+  padding: 0.5rem;
+  font-size: 1rem;
 }
