--- a/src/app/modules/dogs/components/dogs-list/dogs-list.component.html
+++ b/src/app/modules/dogs/components/dogs-list/dogs-list.component.html
@@ -1,12 +1,5 @@
 <div class="dogs-container">
   <ng-container *ngFor="let dog of dogs">
-    <div class="dog">
-      <div class="dog-photo"></div>
-      <div class="dog-data">
-        <div class="dog-name">{{ dog.name }}</div>
-        <div class="dog-breed">{{ dog.breed }}</div>
-        <div class= "guide-name">imię przewodnika</div>
-      </div>
-    </div>
+    <app-dogs-list-card [dog]="dog"></app-dogs-list-card>
   </ng-container>
 </div>
