--- a/src/app/modules/dogs/components/dogs-list/dogs-list-card/dogs-list-card.component.html
+++ b/src/app/modules/dogs/components/dogs-list/dogs-list-card/dogs-list-card.component.html
@@ -1,4 +1,4 @@
-<div class="dog">
+<div class="dog" [routerLink]="['/dogs', dog.id]" routerLinkActive="active">
   <div class="dog-photo"></div>
   <div class="dog-data">
     <span class="dog-name">{{ dog.name }}</span>
