Fix path to dogs card image

--- a/src/app/modules/dogs/components/dogs-list/dogs-list-card/dogs-list-card.component.css
+++ b/src/app/modules/dogs/components/dogs-list/dogs-list-card/dogs-list-card.component.css
@@ -11,7 +11,7 @@
   /* temporary hardcode for picture */
   width: 95%;
   height: 20rem;
-  background-image: url('../../../../../../assets/images/home-background.jpg');
+  background-image: url('/assets/images/home-background.jpg');
 }
 
 .dog-data {
