Create basic layout for dog details

--- a/src/app/modules/dogs/components/dog/dog.component.html
+++ b/src/app/modules/dogs/components/dog/dog.component.html
@@ -1,2 +1,11 @@
-<p>dog works!</p>
-<p>Display data about dog: {{ id }}</p>
+<div class="tabs">Display tabs here</div>
+<div class="dog-details-container">
+  <div class="dog-info">
+    <p>Display data about dog: {{ id }}</p>
+  </div>
+  <div class="dog-photo">
+    <div id="photo-background">
+      <div id="photo"></div>
+    </div>
+  </div>
+</div>
