Use store for single dog

--- a/src/app/modules/dogs/components/dog/dog.component.html
+++ b/src/app/modules/dogs/components/dog/dog.component.html
@@ -2,6 +2,7 @@
 <div class="dog-details-container">
   <div class="dog-info">
     <p>Display data about dog: {{ id }}</p>
+    <p>Display data about dog: {{ currentDog.name }}</p>
   </div>
   <div class="dog-photo">
     <div id="photo-background">
