--- a/src/app/modules/dogs/components/dogs-list/dogs-list.component.css
+++ b/src/app/modules/dogs/components/dogs-list/dogs-list.component.css
@@ -1,7 +1,7 @@
 .dogs-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(20rem,1fr));
+  /* grid-template-rows: 1fr; */
   column-gap: 0.5rem;
   row-gap: 0.5rem;
 }
